bugfix [#32538] 'Mouse Over Any' sensor 'Pulse' button missing since 2.5x [Patch] - based on the patch from HG1