source/blender/makesrna/intern/rna_sensor.c
@@ -417,6 +417,11 @@ static void rna_def_mouse_sensor(BlenderRNA *brna)
 	RNA_def_property_enum_items(prop, mouse_event_items);
 	RNA_def_property_ui_text(prop, "Mouse Event", "Type of event this mouse sensor should trigger on");
 	RNA_def_property_update(prop, NC_LOGIC, NULL);
+
+	prop = RNA_def_property(srna, "use_pulse", PROP_BOOLEAN, PROP_NONE);
+	RNA_def_property_boolean_sdna(prop, NULL, "flag", SENS_MOUSE_FOCUS_PULSE);
+	RNA_def_property_ui_text(prop, "Pulse", "Moving the mouse over a different object generates a pulse");
+	RNA_def_property_update(prop, NC_LOGIC, NULL);
 }
 
 static void rna_def_touch_sensor(BlenderRNA *brna)
